fix partial visibility on sidebar collapse

--- a/editor/src/app/components/library-page/library-page.component.scss
+++ b/editor/src/app/components/library-page/library-page.component.scss
@@ -33,9 +33,7 @@
       max-width: 60px;
       overflow: hidden;
 
-      scl-download-panel,
-      scl-filter-panel,
-      scl-quiz {
+      > *:not(.collapse-button) {
         visibility: hidden;
       }
     }
